--- a/src/quote.css
+++ b/src/quote.css
@@ -15,6 +15,7 @@
 .container{
     width: 700px;
     margin: auto;
+    border-radius: 20px;
     background-color: white;
     box-shadow: 3px 3px 6px 1px gray;
 }
